syntax = "proto3";

package notification;

import "common.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "com.study.notificationservice.grpc";
option java_outer_classname = "NotificationProto";

enum LinkedSubject {
  PLAN = 0;
  TEAM = 1;
}

//Notification
message GetNotificationsRequest {
  string userId = 1;
  string cursor = 2;
  int32 size = 3;
}

message NotificationResponse {
  string title = 1;
  string date = 2;
  string content = 3;
  bool isRead = 4;
  LinkedSubject subject = 5;
  string subjectId = 6;
}

message NotificationsResponse {
  repeated NotificationResponse notifications = 1;
  int64 total = 2;
  string nextCursor = 3;
}

message MarkNotificationsAsReadRequest {
  repeated string ids = 1;
}

message MarkAllNotificationsAsReadRequest {
  string userId = 1;
}

message DeleteNotificationsRequest {
  repeated string ids = 1;
}

message DeleteAllNotificationsRequest {
  string userId = 1;
}

//Invitation
message GetInvitationsRequest {
  string userId = 1;
  string cursor = 2;
  int32 size = 3;
}

message InvitationResponse {
  string id = 1;
  string inviterId = 2;
  string teamId = 3;
  string teamName = 4;
  string invitedAt = 5;
}

message InvitationsResponse {
  repeated InvitationResponse invitations = 1;
  int64 total = 2;
  string nextCursor = 3;
}

message ReplyToInvitationRequest {
  string id = 1;
  bool accept = 2;
}

//Notification settings
message GetTeamNotificationSettingsRequest {
  string userId = 1;
  string teamId = 2;
}

message TeamNotificationSettingsResponse {
  string id = 1;
  bool teamNotification = 2;
  bool teamPlanReminder = 3;
  bool chatNotification = 4;
}

message UpdateTeamNotificationSettingsRequest {
  string id = 1;
  google.protobuf.BoolValue teamNotification = 2;
  google.protobuf.BoolValue chatNotification = 3;
  google.protobuf.BoolValue teamPlanReminder = 4;
}

service NotificationService {
  rpc GetNotifications(GetNotificationsRequest) returns (NotificationsResponse);
  rpc MarkNotificationsAsRead(MarkNotificationsAsReadRequest) returns (common.ActionResponse);
  rpc MarkAllNotificationsAsRead(MarkAllNotificationsAsReadRequest) returns (common.ActionResponse);
  rpc DeleteNotifications(DeleteNotificationsRequest) returns (common.ActionResponse);
  rpc DeleteAllNotifications(DeleteAllNotificationsRequest) returns (common.ActionResponse);

  rpc GetInvitations(GetInvitationsRequest) returns (InvitationsResponse);
  rpc ReplyToInvitation(ReplyToInvitationRequest) returns (common.ActionResponse);

  rpc GetTeamNotificationSettings(GetTeamNotificationSettingsRequest) returns (TeamNotificationSettingsResponse);
  rpc UpdateTeamNotificationSettings(UpdateTeamNotificationSettingsRequest) returns (common.ActionResponse);
}