syntax = "proto3";

package user;

import "common.proto";

option java_multiple_files = true;
option java_package = "com.study.userservice.grpc";
option java_outer_classname = "UserProto";

enum Gender {
  UNSPECIFIED = 0;
  FEMALE = 1;
  MALE = 2;
  OTHER = 3;
}

message CreateUserRequest {
  string username = 1;
  string dateOfBirth = 2;
  Gender gender = 3;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string dateOfBirth = 3;
  Gender gender = 4;
}

message GetUserByIdRequest {
  string id = 1;
}

message UserDetailResponse {
  string id = 1;
  string username = 2;
  string dateOfBirth = 3;
  Gender gender = 4;
  string avatarUrl = 5;
}

message SearchUserRequest {
  string keyword = 1;
  string cursor = 2;
  int32 size = 3;
}

message UserSummaryResponse {
  string id = 1;
  string username = 2;
  string avatarUrl = 3;
}

message ListUserResponse {
  repeated UserSummaryResponse users = 1;
  int64 total = 2;
  string nextCursor = 3;
}

message UpdateUserRequest {
  string id = 1;
  string username = 2;
  string dateOfBirth = 3;
  Gender gender = 4;
}

message UploadUserAvatarRequest {
  string id = 1;
  string avatarUrl = 2;
}

message ExistsByIdRequest {
  string id = 1;
}

message ExistsByIdResponse {
  bool exists = 1;
}

// gRPC Service
service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUserById(GetUserByIdRequest) returns (UserDetailResponse);
  rpc SearchUserByUsername(SearchUserRequest) returns (ListUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc UploadUserAvatar(UploadUserAvatarRequest) returns (common.ActionResponse);
  rpc ExistsById(ExistsByIdRequest) returns (ExistsByIdResponse);
}